# ESP32-DAPLink

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  partitions-4m.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  sdkconfig.disableusb
algo/GD/F1/: GD32F10x_CL.FLM  GD32F10x_FMC_OB.FLM
algo/ST/F4/: STM32F4xx_1024.FLM
algo/ST/L4/: STM32L4xx_1024.FLM  STM32L4xx_128.FLM  STM32L4xx_256.FLM  STM32L4xx_512.FLM
algorithm/GD/F1/: GD32F10x_HD.FLM  GD32F10x_MD.FLM  GD32F10x_XD.FLM
components/CMSIS-DAP/: CMakeLists.txt
components/CMSIS-DAP/Include/: DAP_config.h  error.h  flash_blob.h  swd_host.h  swd_opt.h
components/CMSIS-DAP/Source/: CMakeLists.txt  DAP.c  SWD_flash.c  SWD_host.c  SW_DP.c  error.c  swd_flash.c  swd_host.c  swd_opt.c
components/CMSIS-DAP/algo/: STM32F0xx_16.c  STM32F0xx_OPT.c  STM32F10x_OPT.c  STM32F3xx_OPT.c  STM32F4xx_1024.c  STM32F4xx_OPT.c  STM32F7xx_OPT.c  STM32H7xx.c
components/DAP/: CMakeLists.txt
components/DAP/Include/: DAP.h  DAP_config.h  dap_strings.h  debug_cm.h  swd_host.h
components/DAP/Source/: CMakeLists.txt  SW_DP.c  error.c  swd_host.c
components/DAP/config/: DAP_config.h
components/DAP/include/: cmsis_compiler.h  gpio_op.h  spi_switch.h  uart_modify.h
components/DAP/source/: DAP.c  JTAG_DP.c  SWO.c  SW_DP.c  dap_utility.c  spi_op.c  spi_switch.c
components/Program/: CMakeLists.txt
components/Program/inc/: algo_extractor.h  bin_prog.h  bin_program.h  elf.h  file_programmer.h  flash_accessor.h  flash_blob.h  flash_iface.h  hex_parser.h  hex_prog.h  hex_program.h  log.h  program_iface.h  stream_programmer.h  swd_iface.h  target_flash.h  target_swd.h
components/Program/src/: algo_extractor.cpp  bin_prog.cpp  bin_program.cpp  file_programmer.cpp  flash_accessor.cpp  hex_parser.c  hex_prog.cpp  hex_program.cpp  stream_programmer.cpp  swd_host.c  swd_iface.cpp  target_flash.cpp  target_swd.cpp
components/USBIP/: CMakeLists.txt  Kconfig  MSOS20_descriptor.c  MSOS20_descriptor.h  usb_config.h  usb_defs.h  usb_descriptor.c  usb_descriptor.h  usb_handle.c  usb_handle.h
components/debug_probe/: CMakeLists.txt  Kconfig  debug_gpio.c  debug_gpio.h  debug_gpio_dedic.h  debug_gpio_reg.c  debug_gpio_reg.h  esp_usb_jtag.c  noflash.lf  swd.c
components/debug_probe/include/: debug_probe.h
components/elaphureLink/: CMakeLists.txt  elaphureLink_protocol.c  elaphureLink_protocol.h
components/espressif__esp_tinyusb/: .component_hash  Kconfig  idf_component.yml
components/usbipd/: .gitignore  CMakeLists.txt  Kconfig
components/util/: Kconfig  util.c
docs/: CODE_STYLE.md  REFACTORING_PLAN.md  USBIP_DAP_RESPONSE_FIX.md  usbipd-review.md  wifi_config_plan.md
front/: index.html
html/: program.html  root.html  settings.html  upgrade.html  webserial.html
main/: CMakeLists.txt  DAP_handle.c  DAP_handle.h  FlashOS.h  Kconfig.projbuild  algo_extractor.cpp  algo_extractor.h  algo_manager.h  bin_prog.cpp  bin_prog.h  bin_programmer.cpp  bin_programmer.h  cdc_handle.c  cdc_handle.h  cdc_uart.c  cdc_uart.h  flash.h  flash_manager.cpp  flash_manager.h  flm_extractor.cpp  flm_extractor.h  hex_parser.h  hex_prog.cpp  hex_prog.h  hex_programmer.cpp  hex_programmer.h  idf_component.yml  kcp_server.c  kcp_server.h  main.c  main.cpp  main.h  msc_disk.c  msc_disk.h  prog.cpp  prog.h  prog_data.cpp  prog_data.h  prog_idle.cpp  prog_idle.h  (+30 more)
main/dap/: DAP_handle.c  DAP_handle.h
main/disk/: disk.c  disk.h
main/programmer/: prog.cpp  prog.h  prog_data.cpp  prog_idle.cpp  prog_idle.h  prog_offline.cpp  prog_offline.h  prog_online.cpp  prog_online.h  programmer.cpp  programmer.h
main/serial/: cdc_uart.c  serial_manager.c  serial_manager.h
main/usb/: msc_disk.c  msc_disk.h  usb_cdc_handler.c  usb_desc.c
main/usbip/: dap_handler.c  dap_handler.h  swo_handler.c  swo_handler.h  usbip_config.h  usbip_context.c  usbip_context.h  usbip_endpoint_handler.c  usbip_endpoint_handler.h  usbip_protocol.c  usbip_protocol.h  usbip_server.c  usbip_server.h  usbip_service.c  usbip_service.h
main/usbip/transport/: transport.c  transport.h  transport_kcp.c  transport_kcp.h  transport_netconn.c  transport_netconn.h  transport_tcp.c  transport_tcp.h
main/web/: web_handler.cpp  web_handler.h  web_server.c
(+34 files in other folders)
